Harden embedded runtime for Android API compatibility